# pedestrian-detector

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  main.cpp  net.cpp
box/: box.py  bucket.py
convolution/: conv  conv.cl  conv.cpp  convolution.cpp  convolution.h
mlp/: .mlp.cpp.swp  Makefile  mlp  mlp.cpp  weights
samples/: lp-right.mpeg  sample_source.txt  stationary.mpeg
src/: clhelp.cpp  clhelp.h  conv.cpp  convolution.cpp  kernels.cl  layer.cpp  serial.cpp  types.cpp  types.h  util.cpp
src/conv/: conv.cl  conv.cpp
