cmake_minimum_required(VERSION 2.8)
project(pedestrian-detector)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
set( CMAKE_EXPORT_COMPILE_COMMANDS 1 )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package( OpenCV REQUIRED )
find_package( OpenCL REQUIRED )
add_executable(main main.cpp src/util.cpp)
add_executable(net net.cpp src/conv/clhelp.cpp)
target_link_libraries( main ${OpenCV_LIBS} )
target_link_libraries( net ${OpenCV_LIBS} ${OPENCL_LIBRARIES})
