cmake_minimum_required(VERSION 2.8)
project(pedestrian-detector)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
set( CMAKE_EXPORT_COMPILE_COMMANDS 1 )
find_package( OpenCV REQUIRED )
find_package( OpenCL REQUIRED )
find_package( OpenMP REQUIRED )
include_directories(${OPENCL_INCLUDE_DIRS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS} -std=c++11")
# add_executable(main main.cpp src/util.cpp)
add_executable(net net.cpp src/clhelp.cpp)
# target_link_libraries( main ${OpenCV_LIBS} )
target_link_libraries( net ${OpenCV_LIBS} ${OPENCL_LIBRARIES})
