cmake_minimum_required(VERSION 2.8)
project(pedestrian-detector)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
set( CMAKE_EXPORT_COMPILE_COMMANDS 1 )
find_package( OpenCV REQUIRED )
find_package( OpenCL REQUIRED )
find_package( OpenMP )
find_library(CLBLAS_LIBRARY clBLAS ${CMAKE_SOURCE_DIR}/clBLAS/build/package/lib64)
find_path(CLBLAS_INCLUDE_DIR clBLAS.h ${CMAKE_SOURCE_DIR}/clBLAS/build/package/include)
include_directories(${OPENCL_INCLUDE_DIRS} ${CLBLAS_INCLUDE_DIR})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS} -std=c++11")
# add_executable(main main.cpp src/util.cpp)
add_executable(net net.cpp src/clhelp.cpp)
# target_link_libraries( main ${OpenCV_LIBS} )
target_link_libraries( net ${OpenCV_LIBS} ${OPENCL_LIBRARIES} ${CLBLAS_LIBRARY})
